--- a/main.css
+++ b/main.css
@@ -31,10 +31,16 @@ body {
 }
 
 .Navbar {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
   
   
 }
-.Navbar, ul {
+.Navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -53,8 +59,58 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   padding: 10px 16px;
+  font-family: 'Courier New', Courier, monospace;
+  text-decoration: none;
   color: rgb(209, 197, 197);
 }
 .Navbar ul li a:hover{
   background-color: rgb(22, 22, 26);
+}
+
+.Body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 30px;
+  display:block;
+  position: relative;
+  top: 25px;
+  text-align: center;
+}
+
+.Cap-Proj {
+  display:block;
+  position: relative;
+  padding-bottom: 15px;
+  transition: font-size 0.5s ease;
+  width: 622px;
+  border-color: black;
+  padding-left: 15px;
+  padding-top: 15px;
+  border-style: solid;
+  font-size: 0;
+  overflow:hidden;
+  align: left;
+  
+  
+}
+
+.Cap-Proj h2 {
+  overflow: hidden;
+  font-style:oblique;
+  text-decoration: underline;
+}
+
+.Cap-Proj img {
+  display:block;
+  position: relative;
+  border-color: black;
+  border-style: solid;
+  border-spacing: 20px;
+  width: 600px;
+  align-self: left;
+  
+}
+
+.Cap-Proj:hover {
+  font-size: 24px;
+  overflow:visible
 }
